--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
             </div>
 
             <div class="contact">
-              <label for="zip" style="
-              margin-left: 0px;
-              margin-right: 0px;
-              ">Zip Code</label>
+              <label for="zip" class="zip-label">Zip Code</label>
               <input type="text" id="zip" name="user_zip">
             </div>
           </fieldset>
